# ticketscraper-dbt-duckdb

./: .gitignore  .user.yml  README.md  convert.py  dbt.duckdb  dbt_project.yml  makefile  packages.yml  profiles.yml  pyproject.toml  response.html
.github/workflows/: dbt.yml
analyses/: analysis.sql  expired.sql
macros/: find_duplicates.sql
models/: sources.yml  stg_sold_cities.sql
models/int/: checked_tickets.py  int_event_entrances.sql  int_event_scrape.sql  int_expired_listings.py  int_expired_tickets.py  int_listings_enriched.sql  int_seller.sql  int_suspect_listings.sql  int_tickets_enriched.sql  int_validated_listings.sql  int_validated_tickets.sql
models/marts/: dim_seller.sql  listings.sql  mart_profit_per_event.sql  mart_scraped_events.sql  mart_suspect_listings.sql  mart_tickets_enriched.sql  mart_tickets_sold_stats.sql
models/staging/: schema.yml  stg_events.sql  stg_invalid_listings.sql  stg_listings_sold.sql  stg_tickets_sold.sql
models/staging/ticketswap/: _ticketswap__models.yml  _ticketswap__sources.yml  stg_events.sql  (+3 more)
models/utils/: generate_properties.sql
rill/dashboards/: mart_tickets_enriched_model_dashboard.yaml  median_ticket_price_count_dashboard.yaml  tickets_sold_cheaper_dashboard.yaml  tickets_sold_model_dashboard.yaml
rill/models/: mart_tickets_enriched_model.sql  median_ticket_price_count.sql  tickets_sold_cheaper.sql  tickets_sold_model.sql
rill/sources/: mart_tickets_enriched.yaml  stg_tickets_sold.yaml  tickets_sold.yaml
scripts/: convert.py  duckdb_export.py  load_s3_files.py  migrate.py  upload_to_motherduck.py
