[tool.poetry]
name = "ticketscraper-dbt-duckdb"
version = "0.1.0"
description = "Ticketscraper dbt duckdb"
authors = ["Lasse Benninga <devops.pipeline@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = "1.4.0"
s3fs = "2023.3.0"
sqlfmt = "^0.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
