[tool.poetry]
name = "ticketscraper-dbt-duckdb"
version = "0.1.0"
description = "Ticketscraper dbt duckdb"
authors = ["Lasse Benninga <devops.pipeline@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = "^1.5.1"
s3fs = "2023.3.0"
sqlfmt = "^0.0.2"
sqlfluff = "^2.0.1"
pyarrow = "^12.0.0"
pandas = "^2.0.2"
pdbpp = "^0.10.3"
data-diff = {extras = ["duckdb"], version = "^0.8.4"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
